--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -24,7 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -34,11 +35,13 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'       // za tabLayout
     implementation "androidx.recyclerview:recyclerview:1.1.0"           // za recyclerview
-    implementation "androidx.cardview:cardview:1.0.0"       // za kartice u recyclerviewove, odnosno za pojedinacne iteme
+    implementation "androidx.cardview:cardview:1.0.0"
+    // za kartice u recyclerviewove, odnosno za pojedinacne iteme
 
     implementation 'com.android.volley:volley:1.1.1'    //  HTTP library
 
-    implementation 'com.beust:klaxon:5.0.1' //  JSON lib
+    implementation 'com.beust:klaxon:5.0.1'
+    implementation 'com.google.firebase:firebase-database:19.4.0'
 
 
 }
